added practice name form

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
       <h1>CS-364-Project</h1>
       <div id="root"></div>
       <!--
+      OUTDATED SEE App.jsx
         Example form (commented):
         <form id="example-form">
           <label for="example-name">Name</label>
@@ -27,8 +28,6 @@
         This pairs with the commented JS in assets/js/script.js
         and the example backend route in backend/app/routes.py.
       -->
-      
-    
     <script type="module" src="/src/main.jsx"></script>
 
 
