styled and other fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-      <h1>CS-364-Project</h1>
+      <h1>MediaWatchList</h1>
       <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
