--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CS-364-Project</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  
+  <title>MediaWatchList</title>
 </head>
 <body>
-    <div class="container">
-      <h1>MediaWatchList</h1>
-      <div id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
-
-    
-  
 </body>
 </html>
 
